# Changelog

All notable changes to this project will be documented in this file. The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.0.4] - 2023-06-23

- Switch diverter configuration to zfw instead of tproxy slicer

## [1.0.3] - 2023-06-20

- Rebuild to comsume ziti_router_auto_enroll 1.0.6.

## [1.0.2] - 2023-06-14

- Rebuild to comsume ziti_router_auto_enroll 1.0.5.


## [1.0.1] - 2023-05-31

- Rebuild to consume ziti_router_auto_enroll 1.0.4.


## [1.0.0] - 2023-04-18

- Initial version